--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
         <h1>Défi 3 : Utiliser la balise img</h1>
 
         <h2>Et me voilà ! :</h2>
-        <img src="/home/hander01/Desktop/html_ciel/img1_mrrobot.jpeg" alt="Image de Mr. Robot">
+        <img src="https://neo01mrt.github.io/ciel_html/img1_mrrobot.jpeg" alt="Image de Mr. Robot">
     </div>
 
 </body>
